src/test/deca/context/invalid/pierre/objects/wrongReturnWithClass.deca
class A {
    A test(Object o) {
        return o;
    }
}
{}